# firstworldinternet

./: firstworldinternet.cabal
app/: Main.hs
src/: Lib.hs
