name:                firstworldinternet
version:             0.1.0.0
synopsis:            Analyzing the data of my terrible connection
description:         Please see README.md
homepage:            http://github.com/sulami/firstworldinternet#readme
license:             BSD3
license-file:        LICENSE
author:              Robin Schroer
maintainer:          sulami@peerwire.org
copyright:           2015 Robin Schroer
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable fwi
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , firstworldinternet
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sulami/firstworldinternet
